[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/pixel_font100.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/VT323-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
use_mipmaps = true
font_data = ExtResource( 4 )

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 8.0
margin_right = 2.0
margin_bottom = -3.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = -499.0
margin_right = 575.0
margin_bottom = -19.0
custom_constants/separation = 15

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
margin_right = 550.0
margin_bottom = 106.0
focus_neighbour_top = NodePath("../QuitButton")
custom_fonts/font = ExtResource( 2 )
text = "New Game"

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
margin_top = 121.0
margin_right = 550.0
margin_bottom = 227.0
custom_fonts/font = ExtResource( 2 )
text = "Load Game"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 242.0
margin_right = 550.0
margin_bottom = 348.0
custom_fonts/font = ExtResource( 2 )
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 363.0
margin_right = 550.0
margin_bottom = 469.0
focus_neighbour_bottom = NodePath("../NewGameButton")
custom_fonts/font = SubResource( 1 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
